compilador/parser/duckyParserParser.cpp

// Generated from duckyParser.g4 by ANTLR 4.13.2


#include "duckyParserListener.h"
#include "duckyParserVisitor.h"

#include "duckyParserParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct DuckyParserParserStaticData final {
  DuckyParserParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  DuckyParserParserStaticData(const DuckyParserParserStaticData&) = delete;
  DuckyParserParserStaticData(DuckyParserParserStaticData&&) = delete;
  DuckyParserParserStaticData& operator=(const DuckyParserParserStaticData&) = delete;
  DuckyParserParserStaticData& operator=(DuckyParserParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag duckyparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<DuckyParserParserStaticData> duckyparserParserStaticData = nullptr;

void duckyparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (duckyparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(duckyparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<DuckyParserParserStaticData>(
    std::vector<std::string>{
      "program", "var_declarations", "var_decl_list", "var_decl", "var_list", 
      "data_type", "func_declarations", "func_decl", "param_list", "param", 
      "block", "statements", "statement", "assignment", "print", "print_list", 
      "print_item", "loop", "condition", "else_block", "function_call", 
      "arg_list", "expression", "comparison_operator", "term", "factor", 
      "constant"
    },
    std::vector<std::string>{
    },
    std::vector<std::string>{
      "", "MAIN_FUNC", "ID", "SEMI", "MAIN_BLOCK", "END_BLOCK", "VARS", 
      "LBRACE", "RBRACE", "COLON", "COMMA", "INTEGER_TYPE", "FLOAT_TYPE", 
      "FUNCTION", "LPAREN", "RPAREN", "ASSIGN", "PRINT", "STRING_LITERAL", 
      "WHILE", "DO", "IF", "ELSE", "GREATER_THAN", "LESS_THAN", "NOT_EQUAL", 
      "EQUAL", "PLUS", "MINUS", "FLOAT_CONSTANT", "INTEGER_CONSTANT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  duckyparserParserStaticData = std::move(staticData);
}

}

duckyParserParser::duckyParserParser(TokenStream *input) : duckyParserParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

duckyParserParser::duckyParserParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  duckyParserParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *duckyparserParserStaticData->atn, duckyparserParserStaticData->decisionToDFA, duckyparserParserStaticData->sharedContextCache, options);
}

duckyParserParser::~duckyParserParser() {
  delete _interpreter;
}

const atn::ATN& duckyParserParser::getATN() const {
  return *duckyparserParserStaticData->atn;
}

std::string duckyParserParser::getGrammarFileName() const {
  return "duckyParser.g4";
}

const std::vector<std::string>& duckyParserParser::getRuleNames() const {
  return duckyparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& duckyParserParser::getVocabulary() const {
  return duckyparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView duckyParserParser::getSerializedATN() const {
  return duckyparserParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

duckyParserParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* duckyParserParser::ProgramContext::MAIN_FUNC() {
  return getToken(duckyParserParser::MAIN_FUNC, 0);
}

tree::TerminalNode* duckyParserParser::ProgramContext::ID() {
  return getToken(duckyParserParser::ID, 0);
}

tree::TerminalNode* duckyParserParser::ProgramContext::SEMI() {
  return getToken(duckyParserParser::SEMI, 0);
}

duckyParserParser::Var_declarationsContext* duckyParserParser::ProgramContext::var_declarations() {
  return getRuleContext<duckyParserParser::Var_declarationsContext>(0);
}

duckyParserParser::Func_declarationsContext* duckyParserParser::ProgramContext::func_declarations() {
  return getRuleContext<duckyParserParser::Func_declarationsContext>(0);
}

tree::TerminalNode* duckyParserParser::ProgramContext::MAIN_BLOCK() {
  return getToken(duckyParserParser::MAIN_BLOCK, 0);
}

duckyParserParser::BlockContext* duckyParserParser::ProgramContext::block() {
  return getRuleContext<duckyParserParser::BlockContext>(0);
}

tree::TerminalNode* duckyParserParser::ProgramContext::END_BLOCK() {
  return getToken(duckyParserParser::END_BLOCK, 0);
}


size_t duckyParserParser::ProgramContext::getRuleIndex() const {
  return duckyParserParser::RuleProgram;
}

void duckyParserParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<duckyParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void duckyParserParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<duckyParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any duckyParserParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<duckyParserVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

duckyParserParser::ProgramContext* duckyParserParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, duckyParserParser::RuleProgram);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    match(duckyParserParser::MAIN_FUNC);
    setState(55);
    match(duckyParserParser::ID);
    setState(56);
    match(duckyParserParser::SEMI);
    setState(57);
    var_declarations();
    setState(58);
    func_declarations();
    setState(59);
    match(duckyParserParser::MAIN_BLOCK);
    setState(60);
    block();
    setState(61);
    match(duckyParserParser::END_BLOCK);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_declarationsContext ------------------------------------------------------------------

duckyParserParser::Var_declarationsContext::Var_declarationsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* duckyParserParser::Var_declarationsContext::VARS() {
  return getToken(duckyParserParser::VARS, 0);
}

tree::TerminalNode* duckyParserParser::Var_declarationsContext::LBRACE() {
  return getToken(duckyParserParser::LBRACE, 0);
}

duckyParserParser::Var_decl_listContext* duckyParserParser::Var_declarationsContext::var_decl_list() {
  return getRuleContext<duckyParserParser::Var_decl_listContext>(0);
}

tree::TerminalNode* duckyParserParser::Var_declarationsContext::RBRACE() {
  return getToken(duckyParserParser::RBRACE, 0);
}


size_t duckyParserParser::Var_declarationsContext::getRuleIndex() const {
  return duckyParserParser::RuleVar_declarations;
}

void duckyParserParser::Var_declarationsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<duckyParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVar_declarations(this);
}

void duckyParserParser::Var_declarationsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<duckyParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVar_declarations(this);
}


std::any duckyParserParser::Var_declarationsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<duckyParserVisitor*>(visitor))
    return parserVisitor->visitVar_declarations(this);
  else
    return visitor->visitChildren(this);
}

duckyParserParser::Var_declarationsContext* duckyParserParser::var_declarations() {
  Var_declarationsContext *_localctx = _tracker.createInstance<Var_declarationsContext>(_ctx, getState());
  enterRule(_localctx, 2, duckyParserParser::RuleVar_declarations);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(69);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case duckyParserParser::VARS: {
        enterOuterAlt(_localctx, 1);
        setState(63);
        match(duckyParserParser::VARS);
        setState(64);
        match(duckyParserParser::LBRACE);
        setState(65);
        var_decl_list();
        setState(66);
        match(duckyParserParser::RBRACE);
        break;
      }

      case duckyParserParser::MAIN_BLOCK:
      case duckyParserParser::FUNCTION: {
        enterOuterAlt(_localctx, 2);

        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_decl_listContext ------------------------------------------------------------------

duckyParserParser::Var_decl_listContext::Var_decl_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<duckyParserParser::Var_declContext *> duckyParserParser::Var_decl_listContext::var_decl() {
  return getRuleContexts<duckyParserParser::Var_declContext>();
}

duckyParserParser::Var_declContext* duckyParserParser::Var_decl_listContext::var_decl(size_t i) {
  return getRuleContext<duckyParserParser::Var_declContext>(i);
}


size_t duckyParserParser::Var_decl_listContext::getRuleIndex() const {
  return duckyParserParser::RuleVar_decl_list;
}

void duckyParserParser::Var_decl_listContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<duckyParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVar_decl_list(this);
}

void duckyParserParser::Var_decl_listContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<duckyParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVar_decl_list(this);
}


std::any duckyParserParser::Var_decl_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<duckyParserVisitor*>(visitor))
    return parserVisitor->visitVar_decl_list(this);
  else
    return visitor->visitChildren(this);
}

duckyParserParser::Var_decl_listContext* duckyParserParser::var_decl_list() {
  Var_decl_listContext *_localctx = _tracker.createInstance<Var_decl_listContext>(_ctx, getState());
  enterRule(_localctx, 4, duckyParserParser::RuleVar_decl_list);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(71);
      var_decl();
      setState(74); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == duckyParserParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_declContext ------------------------------------------------------------------

duckyParserParser::Var_declContext::Var_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

duckyParserParser::Var_listContext* duckyParserParser::Var_declContext::var_list() {
  return getRuleContext<duckyParserParser::Var_listContext>(0);
}

tree::TerminalNode* duckyParserParser::Var_declContext::COLON() {
  return getToken(duckyParserParser::COLON, 0);
}

duckyParserParser::Data_typeContext* duckyParserParser::Var_declContext::data_type() {
  return getRuleContext<duckyParserParser::Data_typeContext>(0);
}

tree::TerminalNode* duckyParserParser::Var_declContext::SEMI() {
  return getToken(duckyParserParser::SEMI, 0);
}


size_t duckyParserParser::Var_declContext::getRuleIndex() const {
  return duckyParserParser::RuleVar_decl;
}

void duckyParserParser::Var_declContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<duckyParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVar_decl(this);
}

void duckyParserParser::Var_declContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<duckyParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVar_decl(this);
}


std::any duckyParserParser::Var_declContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<duckyParserVisitor*>(visitor))
    return parserVisitor->visitVar_decl(this);
  else
    return visitor->visitChildren(this);
}

duckyParserParser::Var_declContext* duckyParserParser::var_decl() {
  Var_declContext *_localctx = _tracker.createInstance<Var_declContext>(_ctx, getState());
  enterRule(_localctx, 6, duckyParserParser::RuleVar_decl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    var_list();
    setState(77);
    match(duckyParserParser::COLON);
    setState(78);
    data_type();
    setState(79);
    match(duckyParserParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_listContext ------------------------------------------------------------------

duckyParserParser::Var_listContext::Var_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> duckyParserParser::Var_listContext::ID() {
  return getTokens(duckyParserParser::ID);
}

tree::TerminalNode* duckyParserParser::Var_listContext::ID(size_t i) {
  return getToken(duckyParserParser::ID, i);
}

std::vector<tree::TerminalNode *> duckyParserParser::Var_listContext::COMMA() {
  return getTokens(duckyParserParser::COMMA);
}

tree::TerminalNode* duckyParserParser::Var_listContext::COMMA(size_t i) {
  return getToken(duckyParserParser::COMMA, i);
}


size_t duckyParserParser::Var_listContext::getRuleIndex() const {
  return duckyParserParser::RuleVar_list;
}

void duckyParserParser::Var_listContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<duckyParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVar_list(this);
}

void duckyParserParser::Var_listContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<duckyParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVar_list(this);
}


std::any duckyParserParser::Var_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<duckyParserVisitor*>(visitor))
    return parserVisitor->visitVar_list(this);
  else
    return visitor->visitChildren(this);
}

duckyParserParser::Var_listContext* duckyParserParser::var_list() {
  Var_listContext *_localctx = _tracker.createInstance<Var_listContext>(_ctx, getState());
  enterRule(_localctx, 8, duckyParserParser::RuleVar_list);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    match(duckyParserParser::ID);
    setState(86);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == duckyParserParser::COMMA) {
      setState(82);
      match(duckyParserParser::COMMA);
      setState(83);
      match(duckyParserParser::ID);
      setState(88);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Data_typeContext ------------------------------------------------------------------

duckyParserParser::Data_typeContext::Data_typeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* duckyParserParser::Data_typeContext::INTEGER_TYPE() {
  return getToken(duckyParserParser::INTEGER_TYPE, 0);
}

tree::TerminalNode* duckyParserParser::Data_typeContext::FLOAT_TYPE() {
  return getToken(duckyParserParser::FLOAT_TYPE, 0);
}


size_t duckyParserParser::Data_typeContext::getRuleIndex() const {
  return duckyParserParser::RuleData_type;
}

void duckyParserParser::Data_typeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<duckyParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterData_type(this);
}

void duckyParserParser::Data_typeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<duckyParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitData_type(this);
}


std::any duckyParserParser::Data_typeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<duckyParserVisitor*>(visitor))
    return parserVisitor->visitData_type(this);
  else
    return visitor->visitChildren(this);
}

duckyParserParser::Data_typeContext* duckyParserParser::data_type() {
  Data_typeContext *_localctx = _tracker.createInstance<Data_typeContext>(_ctx, getState());
  enterRule(_localctx, 10, duckyParserParser::RuleData_type);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    _la = _input->LA(1);
    if (!(_la == duckyParserParser::INTEGER_TYPE

    || _la == duckyParserParser::FLOAT_TYPE)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Func_declarationsContext ------------------------------------------------------------------

duckyParserParser::Func_declarationsContext::Func_declarationsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

duckyParserParser::Func_declContext* duckyParserParser::Func_declarationsContext::func_decl() {
  return getRuleContext<duckyParserParser::Func_declContext>(0);
}

duckyParserParser::Func_declarationsContext* duckyParserParser::Func_declarationsContext::func_declarations() {
  return getRuleContext<duckyParserParser::Func_declarationsContext>(0);
}


size_t duckyParserParser::Func_declarationsContext::getRuleIndex() const {
  return duckyParserParser::RuleFunc_declarations;
}

void duckyParserParser::Func_declarationsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<duckyParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunc_declarations(this);
}

void duckyParserParser::Func_declarationsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<duckyParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunc_declarations(this);
}


std::any duckyParserParser::Func_declarationsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<duckyParserVisitor*>(visitor))
    return parserVisitor->visitFunc_declarations(this);
  else
    return visitor->visitChildren(this);
}

duckyParserParser::Func_declarationsContext* duckyParserParser::func_declarations() {
  Func_declarationsContext *_localctx = _tracker.createInstance<Func_declarationsContext>(_ctx, getState());
  enterRule(_localctx, 12, duckyParserParser::RuleFunc_declarations);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(95);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case duckyParserParser::FUNCTION: {
        enterOuterAlt(_localctx, 1);
        setState(91);
        func_decl();
        setState(92);
        func_declarations();
        break;
      }

      case duckyParserParser::MAIN_BLOCK: {
        enterOuterAlt(_localctx, 2);

        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Func_declContext ------------------------------------------------------------------

duckyParserParser::Func_declContext::Func_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* duckyParserParser::Func_declContext::FUNCTION() {
  return getToken(duckyParserParser::FUNCTION, 0);
}

tree::TerminalNode* duckyParserParser::Func_declContext::ID() {
  return getToken(duckyParserParser::ID, 0);
}

tree::TerminalNode* duckyParserParser::Func_declContext::LPAREN() {
  return getToken(duckyParserParser::LPAREN, 0);
}

duckyParserParser::Param_listContext* duckyParserParser::Func_declContext::param_list() {
  return getRuleContext<duckyParserParser::Param_listContext>(0);
}

tree::TerminalNode* duckyParserParser::Func_declContext::RPAREN() {
  return getToken(duckyParserParser::RPAREN, 0);
}

duckyParserParser::BlockContext* duckyParserParser::Func_declContext::block() {
  return getRuleContext<duckyParserParser::BlockContext>(0);
}


size_t duckyParserParser::Func_declContext::getRuleIndex() const {
  return duckyParserParser::RuleFunc_decl;
}

void duckyParserParser::Func_declContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<duckyParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunc_decl(this);
}

void duckyParserParser::Func_declContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<duckyParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunc_decl(this);
}


std::any duckyParserParser::Func_declContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<duckyParserVisitor*>(visitor))
    return parserVisitor->visitFunc_decl(this);
  else
    return visitor->visitChildren(this);
}

duckyParserParser::Func_declContext* duckyParserParser::func_decl() {
  Func_declContext *_localctx = _tracker.createInstance<Func_declContext>(_ctx, getState());
  enterRule(_localctx, 14, duckyParserParser::RuleFunc_decl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(97);
    match(duckyParserParser::FUNCTION);
    setState(98);
    match(duckyParserParser::ID);
    setState(99);
    match(duckyParserParser::LPAREN);
    setState(100);
    param_list();
    setState(101);
    match(duckyParserParser::RPAREN);
    setState(102);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Param_listContext ------------------------------------------------------------------

duckyParserParser::Param_listContext::Param_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<duckyParserParser::ParamContext *> duckyParserParser::Param_listContext::param() {
  return getRuleContexts<duckyParserParser::ParamContext>();
}

duckyParserParser::ParamContext* duckyParserParser::Param_listContext::param(size_t i) {
  return getRuleContext<duckyParserParser::ParamContext>(i);
}

std::vector<tree::TerminalNode *> duckyParserParser::Param_listContext::COMMA() {
  return getTokens(duckyParserParser::COMMA);
}

tree::TerminalNode* duckyParserParser::Param_listContext::COMMA(size_t i) {
  return getToken(duckyParserParser::COMMA, i);
}


size_t duckyParserParser::Param_listContext::getRuleIndex() const {
  return duckyParserParser::RuleParam_list;
}

void duckyParserParser::Param_listContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<duckyParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParam_list(this);
}

void duckyParserParser::Param_listContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<duckyParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParam_list(this);
}


std::any duckyParserParser::Param_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<duckyParserVisitor*>(visitor))
    return parserVisitor->visitParam_list(this);
  else
    return visitor->visitChildren(this);
}

duckyParserParser::Param_listContext* duckyParserParser::param_list() {
  Param_listContext *_localctx = _tracker.createInstance<Param_listContext>(_ctx, getState());
  enterRule(_localctx, 16, duckyParserParser::RuleParam_list);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(113);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case duckyParserParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(104);
        param();
        setState(109);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == duckyParserParser::COMMA) {
          setState(105);
          match(duckyParserParser::COMMA);
          setState(106);
          param();
          setState(111);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        break;
      }

      case duckyParserParser::RPAREN: {
        enterOuterAlt(_localctx, 2);

        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamContext ------------------------------------------------------------------

duckyParserParser::ParamContext::ParamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* duckyParserParser::ParamContext::ID() {
  return getToken(duckyParserParser::ID, 0);
}

tree::TerminalNode* duckyParserParser::ParamContext::COLON() {
  return getToken(duckyParserParser::COLON, 0);
}

duckyParserParser::Data_typeContext* duckyParserParser::ParamContext::data_type() {
  return getRuleContext<duckyParserParser::Data_typeContext>(0);
}


size_t duckyParserParser::ParamContext::getRuleIndex() const {
  return duckyParserParser::RuleParam;
}

void duckyParserParser::ParamContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<duckyParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParam(this);
}

void duckyParserParser::ParamContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<duckyParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParam(this);
}


std::any duckyParserParser::ParamContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<duckyParserVisitor*>(visitor))
    return parserVisitor->visitParam(this);
  else
    return visitor->visitChildren(this);
}

duckyParserParser::ParamContext* duckyParserParser::param() {
  ParamContext *_localctx = _tracker.createInstance<ParamContext>(_ctx, getState());
  enterRule(_localctx, 18, duckyParserParser::RuleParam);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(115);
    match(duckyParserParser::ID);
    setState(116);
    match(duckyParserParser::COLON);
    setState(117);
    data_type();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

duckyParserParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* duckyParserParser::BlockContext::LBRACE() {
  return getToken(duckyParserParser::LBRACE, 0);
}

duckyParserParser::StatementsContext* duckyParserParser::BlockContext::statements() {
  return getRuleContext<duckyParserParser::StatementsContext>(0);
}

tree::TerminalNode* duckyParserParser::BlockContext::RBRACE() {
  return getToken(duckyParserParser::RBRACE, 0);
}


size_t duckyParserParser::BlockContext::getRuleIndex() const {
  return duckyParserParser::RuleBlock;
}

void duckyParserParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<duckyParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}
